Bug 151188 - Area-Fill color in Sidebar is not selected on click on the 1st element
Summary: Area-Fill color in Sidebar is not selected on click on the 1st element
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
: 154097 154836 156145 (view as bug list)
Depends on:
Blocks: Sidebar-Properties-Area
  Show dependency treegraph
 
Reported: 2022-09-26 14:43 UTC by Timur
Modified: 2023-10-09 15:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2022-09-26 14:43:01 UTC
Area-Fill color in Sidebar is not selected on click on the 1st element. 
Not in 7.3. Repro 7.4 and 7.5+. Regression.

Open ODP attachment 118595 [details] from bug 94122.
Click on one rectangle with background color - see that Area-Fill in Sidebar is not selected. 
Click on the other rectangle - see that Area-Fill in Sidebar is only now selected. 
(order is not important).
Comment 1 Rafael Lima 2022-09-26 21:55:30 UTC
Repro with

Version: 7.4.0.3 / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded

Not repro with

Version: 7.3.6.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.6-0ubuntu0.22.04.1
Calc: threaded
Comment 2 Rafael Lima 2022-09-26 21:57:35 UTC Comment hidden (obsolete)
Comment 3 Timur 2022-09-27 08:36:36 UTC
(In reply to Rafael Lima from comment #2)
> Isn't this related to bug 150802 ?

Yes, same cause source adc536e9efc77690df62177aa722f9252bdbf96b from bug 128150.
This is a half-regression, as before it was entirely OK, color was proper but Fill was shown None instead of Color.
Comment 4 Gabor Kelemen (Collabora) 2022-09-27 09:03:06 UTC
Repro with bibisect-linux-7.5 

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: bb47ffbc9d36e83695aa0d01767d3f83533c04e0
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

from 4 days ago.
Comment 5 stragu 2023-03-09 21:45:41 UTC
*** Bug 154097 has been marked as a duplicate of this bug. ***
Comment 6 stragu 2023-04-17 09:39:50 UTC
*** Bug 154836 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2023-09-04 11:29:44 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5effb66ee1563689c27ff10b682357120ab7786

tdf#151188 Select correct fill type in sidebar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Samuel Mehrbrodt 2023-09-04 11:30:45 UTC
*** Bug 156145 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2023-10-09 15:21:03 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/def6d74f37b2fce8e0f29fb967108dacefd78896

tdf#151188 Select correct fill type in sidebar

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.