tdf#151188 Select correct fill type in sidebar

Change-Id: Ic123e6b21009cc57bf1c4b5f4edc6dcd277bae0a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156510
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit b5effb66ee1563689c27ff10b682357120ab7786)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156534
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>